# url_shortner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
access/: config.py  urls.py
access/migrations/: 0001_initial.py
access/models/: __init__.py  user.py
access/serializers/: __init__.py  access.py
access/views/: __init__.py  access.py
common/: helpers.py  manager.py  mixins.py
common/models/: __init__.py  base.py  config.py
services/: __init__.py  counter.py  url_shorten.py
shorten/: models.py  serializers.py  urls.py  views.py
shorten/management/commands/: init_counter.py
shorten/migrations/: 0001_initial.py
src/: celery.py  settings.py  urls.py
